<resources>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="quit">Quit</string>

    <string name="login_title">Login with Twitter</string>
    <string name="login_description">Open browser to authorize Monotweety.\nYou will see a numerical PIN code after authorization. Copy and paste it to the input below.</string>

    <string name="open_browser">Open Browser</string>
    <string name="loginform_hint">Enter PIN code</string>
    <string name="login_authorize">Authorize</string>

    <string name="label_notification_state">Notification: %s</string>
    <string name="label_on" translatable="false">ON</string>
    <string name="label_off" translatable="false">OFF</string>

    <string name="screen_name">\@%s</string>
    <string name="logout">Logout</string>
    <string name="open_profile">Open Profile</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="footer">Footer</string>
    <string name="footer_description_on">ON: %s</string>
    <string name="footer_description_off">OFF</string>
    <string name="edit_footer">Edit Footer</string>
    <string name="enable_footer">Enable Footer</string>
    <string name="footer_text">Footer text</string>
    <string name="footer_error">You cannot use \'@\' in footer</string>
    <string name="timelineapp">Select an app to view timeline</string>
    <string name="timelineapp_description_on">ON: %s</string>
    <string name="timelineapp_description_off">OFF</string>
    <string name="timelineapp_dialog_title">Add shortcut to the notification</string>
    <string name="timelineapp_dialog_disable_value">None(disable)</string>

    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="others">Others</string>
    <string name="version">App Version: %1$s(%2$d)</string>
    <string name="version_description">View changelog</string>
    <string name="license">Open Source License</string>

    <string name="support_developer">Support Developer</string>
    <string name="follow_developer">Follow Developer on Twitter</string>
    <string name="follow_developer_description">\@yslibnet (yslibrary.net)</string>
    <string name="share">Share Monotweety</string>
    <string name="share_description">Help spread Monotweety!</string>
    <string name="rate_on_store">Rate on Google Play Store</string>
    <string name="star_github">Star on GitHub</string>

    <string name="loading">Loading…</string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="tweet">tweet</string>
    <string name="close">close</string>
    <string name="notification_footer_on"><b>Footer</b> - ON: %s</string>
    <string name="notification_footer_off"><b>Footer</b> - OFF</string>
    <string name="notification_content">Tap to open tweet dialog:)</string>
    <string name="timeline">timeline</string>

    <string name="tweet_succeeded">Status successfully updated!</string>
    <string name="status_too_long">Content is too long. \nPlease edit on the following dialog</string>

    <!-- Notification -->
    <string name="notification_channel_editor_name">Editor</string>
    <string name="notification_channel_editor_description">Notification to create new tweet</string>

    <string name="status_counter" translatable="false">%1$d/%2$d</string>
    <string name="status_too_long_error">Content is too long</string>
    <string name="quit_without_tweeting">Quit without tweeting?</string>

    <string name="share_message">Check out #Monotweety! %s #Android</string>

    <string name="logout_confirmation">Do you want to logout?</string>

    <string name="compose_tweet">Compose Tweet</string>

    <string name="generic_error">Something went wrong. Please try again later</string>
</resources>
