<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingLeft="@dimen/space_16dp"
    android:paddingTop="@dimen/space_20dp"
    android:paddingRight="@dimen/space_16dp"
    android:paddingBottom="@dimen/space_20dp"
    >

    <TextView
        android:id="@+id/loginFormTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        />

    <TextView
        android:layout_marginTop="@dimen/space_12dp"
        android:id="@+id/loginDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginFormTitle"
        />

    <Button
        android:id="@+id/openBrowser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12dp"
        android:text="@string/open_browser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginDescription"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pinCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16dp"
        android:hint="@string/loginform_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openBrowser"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/authorize"
        app:layout_constraintTop_toBottomOf="@+id/pinCode"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_authorize"
        android:backgroundTint="?attr/colorSecondary"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
