<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingLeft="@dimen/space_16dp"
    android:paddingTop="@dimen/space_20dp"
    android:paddingRight="@dimen/space_16dp"
    android:paddingBottom="@dimen/space_20dp"
    >

    <TextView
        android:id="@+id/footerEditorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_footer"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/enableFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_footer"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintTop_toBottomOf="@+id/footerEditorTitle"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/footerInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_footer"
        app:layout_constraintTop_toBottomOf="@+id/enableFooter"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/footerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginEnd="@dimen/space_16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/footerInput"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footerInput"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
